--- a/web/templates/user/login.html
+++ b/web/templates/user/login.html
@@ -18,11 +18,11 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputUsername">用户名</label>
-                        <input type="text" class="form-control" id="exampleInputUsername" placeholder="username">
+                        <input type="text" class="form-control" name="login_name" id="exampleInputUsername" placeholder="username">
                       </div>
                       <div class="form-group">
                         <label for="exampleInputPassword1">密码</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control" name="login_pwd" id="exampleInputPassword1" placeholder="Password">
                       </div>
                     <button type="button" class="btn btn-primary block full-width m-b do-login">登录</button>
                 </div>
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block js %}
-    
+    <script src="{{ url_for('static',filename='js/user/login.js') }}"></script>
 {% endblock %}
